# SimUAV

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  e2e.yml  e2e_ardupilot.yml
config/: ardupilot_sitl.json  default.json
include/simuav/: ConfigLoader.h  ConfigLoader.inl  FirmwareTarget.h  LogReplayer.h  Simulator.h  StatusServer.h
include/simuav/comms/: MAVLinkBridge.h
include/simuav/logging/: JSONLogger.h  ULogLogger.h
include/simuav/physics/: QuadrotorModel.h  WindModel.h
include/simuav/sensors/: Barometer.h  GPS.h  IMU.h  Magnetometer.h  SensorBase.h
scripts/: e2e_ardupilot_sitl.py  e2e_px4_sitl.py
src/: LogReplayer.cpp  Simulator.cpp  StatusServer.cpp  main.cpp
src/comms/: MAVLinkBridge.cpp
src/logging/: JSONLogger.cpp  ULogLogger.cpp
src/physics/: QuadrotorModel.cpp  WindModel.cpp
src/sensors/: Barometer.cpp  GPS.cpp  IMU.cpp  Magnetometer.cpp
tests/: CMakeLists.txt  test_bridge.cpp  test_config.cpp  test_frames.cpp  test_physics.cpp  test_replay.cpp  test_sensors.cpp  test_simulator.cpp  test_status.cpp  test_ulog.cpp
